--- a/tests/webui-docker-compose.yml
+++ b/tests/webui-docker-compose.yml
@@ -23,8 +23,8 @@ services:
       - $HOME/test-container-cache-${CONTAINER_NAME}/dot-local:/root/.local
       - $HOME/test-container-cache-${CONTAINER_NAME}/dot-cache:/root/.cache
       - /share_nfs:/share_nfs:ro
-      - ${PWD}/${WEBUI_SRC_DIR}:/app/stable-diffusion-webui
-      - ${PWD}/onediff_sd_webui_extensions:/app/stable-diffusion-webui/extensions/onediff_sd_webui_extensions
+      - ${PWD}/${WEBUI_SRC_DIR}:/app/${WEBUI_SRC_DIR}
+      - ${PWD}/onediff_sd_webui_extensions:/app/${WEBUI_SRC_DIR}/extensions/onediff_sd_webui_extensions
       - $PWD:/src/onediff
     working_dir: /src/onediff
     restart: "no"
