--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -21,6 +21,15 @@ env:
   CONTROL_LORA_OPENPOSEXL2_RANK256: /share_nfs/hf_models/controlnet/control-lora-openposeXL2-rank256.safetensors
   SELENIUM_CONTAINER_NAME: selenium-test
   SELENIUM_IMAGE: standalone-chrome:119.0-chromedriver-119.0-grid-4.15.0-20231129
+
+  # For git repos required by webui
+  ASSETS_COMMIT_HASH: 6f7db241d2f8ba7457bac5ca9753331f0c266917
+  STABLE_DIFFUSION_COMMIT_HASH: cf1d67a6fd5ea1aa600c4df58e5b47da45f6bdbf
+  STABLE_DIFFUSION_XL_COMMIT_HASH: 45c443b316737a4ab6e40413d7794a7f5657c19f
+  K_DIFFUSION_COMMIT_HASH: ab527a9a6d347f364e3d185ba6d714e22d80cb3c
+  BLIP_COMMIT_HASH: 48211a1594f1321b00f14c9f7a5b4813144b2fb9
+
+
 concurrency:
   group: sd-examples-${{ github.ref }}
   cancel-in-progress: true
@@ -48,53 +57,58 @@ jobs:
         with:
           repository: comfyanonymous/ComfyUI
           path: ComfyUI
+      
       - name: Checkout Stable Diffusion WebUI
         uses: actions/checkout@v4
         with:
           repository: AUTOMATIC1111/stable-diffusion-webui
-          path: stable-diffusion-webui
-      - name: Checkout openai CLIP
+          path: ${{ env.WEBUI_SRC_DIR }}
+
+      # -------- The following are the dependencies required by webui --------
+      - name: Checkout CLIP (dependency of webui)
         uses: actions/checkout@v4
         with:
           repository: openai/CLIP
-          path: stable-diffusion-webui/repositories/CLIP
+          path: ${{ env.WEBUI_SRC_DIR }}/repositories/CLIP
           ref: d50d76daa670286dd6cacf3bcd80b5e4823fc8e1
-      - name: Checkout open clip
+      - name: Checkout open clip (dependency of webui)
         uses: actions/checkout@v4
         with:
           repository: mlfoundations/open_clip
-          path: stable-diffusion-webui/repositories/open_clip
+          path: ${{ env.WEBUI_SRC_DIR }}/repositories/open_clip
           ref: bb6e834e9c70d9c27d0dc3ecedeebeaeb1ffad6b
-      - name: Checkout stable-diffusion-webui-assets
+      - name: Checkout ${{ env.WEBUI_SRC_DIR }}-assets (dependency of webui)
         uses: actions/checkout@v4
         with:
           repository: AUTOMATIC1111/stable-diffusion-webui-assets
-          path: stable-diffusion-webui/repositories/stable-diffusion-webui-assets
+          path: ${{ env.WEBUI_SRC_DIR }}/repositories/stable-diffusion-webui-assets
           ref: 6f7db241d2f8ba7457bac5ca9753331f0c266917
-      - name: Checkout stablediffusion
+      - name: Checkout stablediffusion (dependency of webui)
         uses: actions/checkout@v4
         with:
           repository: Stability-AI/stablediffusion
-          path: stable-diffusion-webui/repositories/stable-diffusion-stability-ai
+          path: ${{ env.WEBUI_SRC_DIR }}/repositories/stable-diffusion-stability-ai
           ref: cf1d67a6fd5ea1aa600c4df58e5b47da45f6bdbf
-      - name: Checkout generative-models
+      - name: Checkout generative-models (dependency of webui)
         uses: actions/checkout@v4
         with:
           repository: Stability-AI/generative-models
-          path: stable-diffusion-webui/repositories/generative-models
+          path: ${{ env.WEBUI_SRC_DIR }}/repositories/generative-models
           ref: 45c443b316737a4ab6e40413d7794a7f5657c19f
-      - name: Checkout k-diffusion
+      - name: Checkout k-diffusion (dependency of webui)
         uses: actions/checkout@v4
         with:
           repository: crowsonkb/k-diffusion
-          path: stable-diffusion-webui/repositories/k-diffusion
+          path: ${{ env.WEBUI_SRC_DIR }}/repositories/k-diffusion
           ref: ab527a9a6d347f364e3d185ba6d714e22d80cb3c
-      - name: Checkout BLIP
+      - name: Checkout BLIP (dependency of webui)
         uses: actions/checkout@v4
         with:
           repository: salesforce/BLIP
-          path: stable-diffusion-webui/repositories/BLIP
+          path: ${{ env.WEBUI_SRC_DIR }}/repositories/BLIP
           ref: 48211a1594f1321b00f14c9f7a5b4813144b2fb9
+      # -------- The above are the dependencies required by webui --------
+
       - name: Pack src
         working-directory: onediff
         run: |
@@ -108,7 +122,7 @@ jobs:
           git clean -f
           git archive --prefix ${{ env.COMFYUI_SRC_DIR }}/ --format zip HEAD > comfyui-src.zip
       - name: Pack webui
-        working-directory: stable-diffusion-webui
+        working-directory: ${{ env.WEBUI_SRC_DIR }}
         run: |
           git reset --hard
           git clean -f
@@ -121,7 +135,7 @@ jobs:
           WEBUI_DST="oss://gh-src-cache/onediff/${{ github.sha }}/webui-src.zip"
           ./ossutil64 cp --disable-ignore-error --update onediff/onediff-src.zip ${ONEDIFF_DST}
           ./ossutil64 cp --disable-ignore-error --update ComfyUI/comfyui-src.zip ${COMFY_DST}
-          ./ossutil64 cp --disable-ignore-error --update stable-diffusion-webui/webui-src.zip ${WEBUI_DST}
+          ./ossutil64 cp --disable-ignore-error --update ${{ env.WEBUI_SRC_DIR }}/webui-src.zip ${WEBUI_DST}
           echo "onediff_src_url=${ONEDIFF_DST}" >> $GITHUB_OUTPUT
           echo "comfy_src_url=${COMFY_DST}" >> $GITHUB_OUTPUT
           echo "webui_src_url=${WEBUI_DST}" >> $GITHUB_OUTPUT
@@ -335,39 +349,36 @@ jobs:
       - name: Prepare environment for WebUI
         if: matrix.test-suite == 'webui'
         run: |
-          docker exec -d ${{ env.CONTAINER_NAME }} mkdir /app/stable-diffusion-webui/.git /app/stable-diffusion-webui/openai
-          docker exec -d ${{ env.CONTAINER_NAME }} ln -s /share_nfs/onediff_ci/sd-webui/models/clips/clip-vit-large-patch14 /app/stable-diffusion-webui/openai/clip-vit-large-patch14
+          docker exec -d ${{ env.CONTAINER_NAME }} mkdir /app/${{ env.WEBUI_SRC_DIR }}/.git /app/${{ env.WEBUI_SRC_DIR }}/openai
+          docker exec -d ${{ env.CONTAINER_NAME }} ln -s /share_nfs/onediff_ci/sd-webui/models/clips/clip-vit-large-patch14 /app/${{ env.WEBUI_SRC_DIR }}/openai/clip-vit-large-patch14
+          docker exec -w /app/${{ env.WEBUI_SRC_DIR }} -d ${{ env.CONTAINER_NAME }} git config --global --add safe.directory .
+          for dir in $SAFE_DIRECTORIES; do
+            docker exec -w /app/${{ env.WEBUI_SRC_DIR }} -d ${{ env.CONTAINER_NAME }} git config --global --add safe.directory ./repositories/$dir
+          done
+          docker exec -w /app/${{ env.WEBUI_SRC_DIR }} -e venv_dir=- ${{ env.CONTAINER_NAME }} sh -c "bash webui.sh -f --exit --api --no-download-sd-model --do-not-download-clip --disable-safe-unpickle --ckpt-dir /share_nfs/onediff_ci/sd-webui/models"
 
-          docker exec -w /app/stable-diffusion-webui -d ${{ env.CONTAINER_NAME }} git config --global --add safe.directory /app/stable-diffusion-webui
-          docker exec -w /app/stable-diffusion-webui -d ${{ env.CONTAINER_NAME }} git config --global --add safe.directory /app/stable-diffusion-webui/repositories/CLIP
-          docker exec -w /app/stable-diffusion-webui -d ${{ env.CONTAINER_NAME }} git config --global --add safe.directory /app/stable-diffusion-webui/repositories/open_clip
-          docker exec -w /app/stable-diffusion-webui -d ${{ env.CONTAINER_NAME }} git config --global --add safe.directory /app/stable-diffusion-webui/repositories/stable-diffusion-webui-assets
-          docker exec -w /app/stable-diffusion-webui -d ${{ env.CONTAINER_NAME }} git config --global --add safe.directory /app/stable-diffusion-webui/repositories/stable-diffusion-stability-ai
-          docker exec -w /app/stable-diffusion-webui -d ${{ env.CONTAINER_NAME }} git config --global --add safe.directory /app/stable-diffusion-webui/repositories/generative-models
-          docker exec -w /app/stable-diffusion-webui -d ${{ env.CONTAINER_NAME }} git config --global --add safe.directory /app/stable-diffusion-webui/repositories/k-diffusion
-          docker exec -w /app/stable-diffusion-webui -d ${{ env.CONTAINER_NAME }} git config --global --add safe.directory /app/stable-diffusion-webui/repositories/BLIP
-
-          docker exec -w /app/stable-diffusion-webui -e venv_dir=- ${{ env.CONTAINER_NAME }} sh -c "bash webui.sh -f --exit --api --no-download-sd-model --do-not-download-clip --disable-safe-unpickle --ckpt-dir /share_nfs/onediff_ci/sd-webui/models"
         env:
           INDEX_URL: "https://pypi.tuna.tsinghua.edu.cn/simple"
-          CLIP_PACKAGE: "git+file:///app/stable-diffusion-webui/repositories/CLIP"
-          OPENCLIP_PACKAGE: "git+file:///app/stable-diffusion-webui/repositories/open_clip"
-          ASSETS_REPO: "git+file:///app/stable-diffusion-webui/repositories/stable-diffusion-webui-assets"
-          STABLE_DIFFUSION_REPO: "git+file:///app/stable-diffusion-webui/repositories/stable-diffusion-stability-ai"
-          STABLE_DIFFUSION_XL_REPO: "git+file:///app/stable-diffusion-webui/repositories/generative-models"
-          K_DIFFUSION_REPO: "git+file:///app/stable-diffusion-webui/repositories/k-diffusion"
-          BLIP_REPO: "git+file:///app/stable-diffusion-webui/repositories/BLIP"
-
-          ASSETS_COMMIT_HASH: 6f7db241d2f8ba7457bac5ca9753331f0c266917
-          STABLE_DIFFUSION_COMMIT_HASH: cf1d67a6fd5ea1aa600c4df58e5b47da45f6bdbf
-          STABLE_DIFFUSION_XL_COMMIT_HASH: 45c443b316737a4ab6e40413d7794a7f5657c19f
-          K_DIFFUSION_COMMIT_HASH: ab527a9a6d347f364e3d185ba6d714e22d80cb3c
-          BLIP_COMMIT_HASH: 48211a1594f1321b00f14c9f7a5b4813144b2fb9
+          CLIP_PACKAGE: "git+file:///app/${{ env.WEBUI_SRC_DIR }}/repositories/CLIP"
+          OPENCLIP_PACKAGE: "git+file:///app/${{ env.WEBUI_SRC_DIR }}/repositories/open_clip"
+          ASSETS_REPO: "git+file:///app/${{ env.WEBUI_SRC_DIR }}/repositories/stable-diffusion-webui-assets"
+          STABLE_DIFFUSION_REPO: "git+file:///app/${{ env.WEBUI_SRC_DIR }}/repositories/stable-diffusion-stability-ai"
+          STABLE_DIFFUSION_XL_REPO: "git+file:///app/${{ env.WEBUI_SRC_DIR }}/repositories/generative-models"
+          K_DIFFUSION_REPO: "git+file:///app/${{ env.WEBUI_SRC_DIR }}/repositories/k-diffusion"
+          BLIP_REPO: "git+file:///app/${{ env.WEBUI_SRC_DIR }}/repositories/BLIP"
+          SAFE_DIRECTORIES: |
+            CLIP
+            open_clip
+            stable-diffusion-webui-assets
+            stable-diffusion-stability-ai
+            generative-models
+            k-diffusion
+            BLIP
 
       - name: Start WebUI Web Service
         if: matrix.test-suite == 'webui'
         run: |
-          docker exec -w /app/stable-diffusion-webui -d ${{ env.CONTAINER_NAME }} sh -c "python3 /app/stable-diffusion-webui/webui.py --port 7860 --api --no-download-sd-model --do-not-download-clip --disable-safe-unpickle --ckpt-dir /share_nfs/onediff_ci/sd-webui/models --skip-version-check > /app/stable-diffusion-webui/onediff_webui.log 2>&1"
+          docker exec -w /app/${{ env.WEBUI_SRC_DIR }} -d ${{ env.CONTAINER_NAME }} sh -c "python3 webui.py --port 7860 --api --no-download-sd-model --do-not-download-clip --disable-safe-unpickle --ckpt-dir /share_nfs/onediff_ci/sd-webui/models --skip-version-check > /app/${{ env.WEBUI_SRC_DIR }}/onediff_webui.log 2>&1"
           sleep 60
 
       - run: docker exec ${{ env.CONTAINER_NAME }} ps aux
@@ -377,7 +388,7 @@ jobs:
 
       - name: Show WebUI Log
         if: matrix.test-suite == 'webui'
-        run: docker exec ${{ env.CONTAINER_NAME }} cat /app/stable-diffusion-webui/onediff_webui.log
+        run: docker exec ${{ env.CONTAINER_NAME }} cat /app/${{ env.WEBUI_SRC_DIR }}/onediff_webui.log
 
       - name: Shutdown docker for ComfyUI Test
         if: matrix.test-suite == 'comfy'
