--- a/tests/webui-docker-compose.yml
+++ b/tests/webui-docker-compose.yml
@@ -48,7 +48,7 @@ services:
     volumes:
       - $HOME/test-container-cache-${CONTAINER_NAME}/dot-local:/root/.local:rw
       - $HOME/test-container-cache-${CONTAINER_NAME}/dot-cache:/root/.cache:rw
-      - /share_nfs:/share_nfs:ro
+      - /share_nfs:/share_nfs:rw
       - ${PWD}/${WEBUI_SRC_DIR}:/app/${WEBUI_SRC_DIR}:rw
       - ${PWD}/onediff_sd_webui_extensions:/app/${WEBUI_SRC_DIR}/extensions/onediff_sd_webui_extensions:rw
       - $PWD:/src/onediff:rw
