--- a/tests/webui-docker-compose.yml
+++ b/tests/webui-docker-compose.yml
@@ -4,7 +4,7 @@ services:
   onediff-test:
     container_name: ${CONTAINER_NAME}
     image: ${ACR_ORG}/${MATRIX_IMAGE}
-    command: sh -c "ls -ld /share_nfs/onediff_ci/sd-webui/images && ls -l /share_nfs/onediff_ci/sd-webui/images && sleep 5400" 
+    command:  sleep 5400 
     privileged: true
     shm_size: 8g
     network_mode: host
